pi-hole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
spec:
  selector:
    app: pi-hole
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
