pi-hole/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pi-hole
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pihole.home.coleduclos.io`)
      services:
        - name: pi-hole
          port: 80
  tls:
    secretName: pi-hole-ingressroute-certificate-secret
